v1.0.5
-------------------
+ imdb_person: added methods to retrieve printed publications (pubprints()),
  biographical movies (pubmovies()), and "portrayed in" (pubportraits())
+ imdb_person: added method to retrieve interview list (interviews())
+ added overall results to the API test page

v1.0.4 (26.05.2008)
-------------------
! imdb_search: if maxresults was set to 0, no results have been returned
  (instead of unlimited)
! imdb: colors(), sounds() and episodes() have been broken due to IMDB site changes
+ added set of test pages (for verification of all methods)
* default cache expiry increased from 600 (10min) to 3600 (1h)

v1.0.3 (20.05.2008)
-------------------
+ imdb_person: methods to retrieve birthname, nicknames, body height and spouses
! imdb: languages() method was broken due to IMDB site changes
+ imdb_person: added method to retrieve mini bio
+ imdb_person: added trivia(), quotes(), trademark() and salary()
! fixed a flaw in imdb::photo() (you could not retrieve the thumbnail and the
  bigger photo in the same run)

v1.0.2 (14.05.2008)
-------------------
+ new method mpaa_reason() reports why the movie was rated PG-* in the USA
+ introduced new class imdb_person with methods to retrieve name, picture
  and filmographies of staff members
+ imdb_person: New method born() to retrieve birthdate and place
+ imdb_person: New method died() does the same for day of death (including
  cause, if available)
* links to staff members on the demo imdb.php page now pointing to the new
  imdb_person.php instead of the IMDB site to give insight into the new classes
  capabilities
! imdb: staff methods (director, cast, writing, producer, composer) did not
  return the persons IMDBID correctly (fixed: the "nm" prefix is now removed)

v1.0.1 (07.05.2008)
-------------------
* code reorganization: Split up the imdb class to create class imdb_base
+ the photo methods now support an optional parameter to retrieve a bigger